
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:defaultValue="@string/pref_default_display_name"
        app:key="@string/user_display_name"
        app:title="@string/pref_title_display_name"
        app:useSimpleSummaryProvider="true"/>

    <EditTextPreference
        app:defaultValue="@string/pref_default_email_address"
        app:key="@string/user_email_address"
        app:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        app:defaultValue="@string/pref_default_favourite_social"
        app:entries="@array/pref_entries_favourite_social"
        app:entryValues="@array/pref_values_favourite_social"
        app:key="user_favourite_social"
        app:title="favourite social network"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>

